# prediction-churn

./: MANIFEST.in  Peer_review-Bhantana.docx  README.md  environment.yml  setup.cfg  setup.py
data/: README.md
data/data_for_final_presentation/: result_42.csv  result_43.csv  result_44.csv  result_45.csv  result_46.csv  result_dist_42.csv  result_dist_43.csv  result_dist_44.csv  result_dist_45.csv  result_dist_46.csv
docs/: First_capstone_ppt_-_1.pptx  Motivation_and_Milestones.docx  Project Motivations.docx  Proofpoint_Milestone_RMH.docx  Proofpoint_Motivation_RMH.docx  ideas.md  peerReview_bizhanov.docx
experiments/: First_sem_results.md  Unlabeled_data.md
experiments/images/: Readme.md  all_in_one.ipynb
experiments/novel_method/: README.md
experiments/tabular/: README.md  anchor.py  churn.py  churn_exp.py  distillation.py  experiments_tabular.py  get_data.py  models.py  preprocessing.py
experiments/textual/: HyperParams.py  README.md  anchor.py  build_vocab.py  distillation.py  label_smoothing.py  load_data_train_split.py  lstm.py  predict_batch.py  predict_sentiment.py  tokenizer.py  train_val.py
notebooks/: exp_tabular_data.ipynb  exp_text_data.ipynb  experiments_tabular.py  plots_for_final_presentation.ipynb
notebooks/second_semester/: Unlabeled_novelmethod_anchor_v8.ipynb  Unlabeled_novelmethod_dist_v8.ipynb
notebooks/src_imdb/: IMDB.py  anchor.py  distillation.py  (+4 more)
src/: __init__.py  distillation.py  get_data.py  metrics.py  models.py  preprocessing.py  test_metrics.py  utils.py
test/: test_metrics.py  test_train.py  test_transform.py
(+18 files in other folders)
