[metadata]
name = churn-reduction
version = 0.0.1
url = https://gitlab.oit.duke.edu/duke-mids/workingprojectrepositories/proofpoint
description = Prediction churn reduction methods
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.9
install_requires =
    torch>=1.1
    numpy>=1.0

[options.packages.find]
where = src
exclude =
    test*

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers

[coverage:run]
source = churn
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[tox:tox]
envlist = py310
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
commands = pytest {posargs}

[testenv:typecheck]
deps =
    mypy
commands =
    mypy --ignore-missing-imports {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}
